--- a/client/package.json
+++ b/client/package.json
@@ -30,10 +30,13 @@
     "leaflet": "latest",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-google": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-bootstrap-validation": "^0.1.11",
+    "react-bs-datatable": "^3.6.1",
     "react-chartjs-2": "^2.11.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -44,7 +47,7 @@
     "react-pro-sidebar": "^0.6.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-three-fiber": "^6.0.13",
     "react-transition-group": "^4.3.0",
