--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "leaflet-geometryutil": "^0.10.1",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-google": "^1.0.1",
+    "lrm-graphhopper": "^1.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
