--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "react-scripts": "^5.0.1",
     "react-three-fiber": "^6.0.13",
     "react-transition-group": "^4.3.0",
+    "react-use": "^17.4.0",
     "reactstrap": "^8.9.0",
     "sass": "^1.54.8",
     "styled-components": "^5.3.5",
